# cargo-criterion

./: 2rust-toolchain.toml  Cargo.toml  log.rs
src/: analysis.rs  bench_target.rs  config.rs  connection.rs  estimate.rs  format.rs  main.rs  model.rs  report.rs  report_table.rs  value_formatter.rs
src/stats/: mod.rs
src/stats/bivariate/: mod.rs
src/stats/univariate/: sample.rs
src/stats/univariate/outliers/: tukey.rs
