[package]
authors = ["Brook Heisler <redattack34@gmail.com>"]
edition = "2018"
name    = "cargo-criterion"
version = "1.1.0"

categories  = ["development-tools::cargo-plugins", "development-tools::profiling"]
description = "Cargo extension for running Criterion.rs benchmarks and reporting the results."
keywords    = ["benchmark", "criterion"]
license     = "Apache-2.0/MIT"
readme      = "README.md"
repository  = "https://github.com/bheisler/cargo-criterion"

exclude = ["ci/*", "integration_tests/*"]

[dependencies]
anyhow          = "1.0"
atty            = "0.2"
cast            = "0.2"
chrono          = { version = "0.4", features = ["serde"] }
clap            = "2.33"
criterion-plot  = { version = "0.4.3", optional = true }
itertools       = "0.14.0"
lazy_static     = "1.4"
linked-hash-map = "0.5"
linked_hash_set = "0.1"
log             = "0.4"
num-traits      = "0.2"
oorandom        = "11.1"
rayon           = "1.3"
serde           = "1.0"
serde_cbor      = "0.11"
serde_derive    = "1.0"
serde_json      = "1.0"
simplelog       = "0.10"
tinytemplate    = "1.1"
toml            = { version = "0.5", features = ["preserve_order"] }
walkdir         = "2.3"

[dependencies.plotters]
default-features = false
features         = ["area_series", "line_series", "svg_backend"]
optional         = true
version          = "0.3.1"

[features]
default = ["gnuplot_backend", "plotters_backend"]

# Enable the gnuplot plotting backend.
gnuplot_backend = ["criterion-plot"]

# Enable the plotters plotting backend.
plotters_backend = ["plotters"]

[dev-dependencies]
approx     = "0.3"
quickcheck = { version = "0.9", default-features = false }
rand       = "0.7"

[lints.clippy]
all            = "warn"
cargo          = "warn"
inline_always  = { level = "allow", priority = 1 }
nursery        = "warn"
pedantic       = "warn"
too_many_lines = { level = "allow", priority = 1 }
